[package]
name = "rust_networking_example"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
libc = "0.2"
once_cell = "1"
termion = "1.5.6"


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "server2"
path = "src/server2.rs"

[[bin]]
name = "server3"
path = "src/server3.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "client2"
path = "src/client2.rs"

[[bin]]
name = "client3"
path = "src/client3.rs"

[[bin]]
name = "sten"
path = "src/stenography.rs"