[package]
name = "rust_networking_example"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
sysinfo = "0.29.11"


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "server2"
path = "src/server2.rs"

[[bin]]
name = "server3"
path = "src/server3.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "test"
path = "src/test_election.rs"

[[bin]]
name = "test2"
path = "src/test_balance.rs"

[[bin]]
name = "test3"
path = "src/test3.rs"